# my-notes-api

./: README.md  main.py  pyproject.toml  schema.sql
